--- a/christmas-tree/Cargo.toml
+++ b/christmas-tree/Cargo.toml
@@ -2,7 +2,11 @@
 name = "christmas-tree"
 version = "0.1.0"
 edition = "2021"
+authors = ["Sea <MrDaemon@outlook.com>"]
+description = "Merry Christmas!"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.*"
+rand = "0.8.4"
